# mini-mars

./: CMakeLists.txt  README.md
include/: hello.h
src/: CMakeLists.txt  hello.c  main.c
